// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-account-switcher/ProjectAccountSwitcher integration renders with controlled active account/project 1`] = `
.emotion-36 {
  position: relative;
  display: inline-block;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-4 {
  margin: 0;
  padding-left: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 34px;
  line-height: 34px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  height: 32px;
  width: 32px;
  border-radius: 2px;
  border: 1px solid #bec8d2;
  color: #485366;
  text-align: center;
  margin-right: 10px;
}

.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  border: none;
  cursor: pointer;
  color: transparent;
}

.emotion-0[src=''] {
  display: none;
}

.emotion-6 {
  margin: 0 12px;
}

.emotion-1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-9 {
  fill: transparent;
}

.emotion-10 {
  fill: #ffffff;
}

.emotion-32 {
  margin: 0;
  padding: 0 10px 10px 10px;
}

.emotion-34 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-33 {
  position: relative;
}

.emotion-21 {
  margin-top: 30px;
  margin-bottom: 10px;
  list-style: none;
  padding: 0;
}

.emotion-21:first-of-type {
  margin-top: 0;
  padding-top: 10px;
}

.emotion-16 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 34px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-top: 8px;
  white-space: nowrap;
}

.emotion-14 {
  display: inline-block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  height: 30px;
  width: 60px;
  border-radius: 2px;
  border: 1px solid #bec8d2;
  color: #485366;
  text-align: center;
  margin-right: 10px;
}

.emotion-15 {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006EAF;
  outline: none;
}

<div
  className="emotion-36"
>
  <div
    className="emotion-8"
  >
    <div
      className="emotion-7"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="emotion-4"
      >
        <span
          className="emotion-2"
        >
          <img
            alt="Account 2 / Project 1"
            className="emotion-0"
            src=""
          />
          <span
            className="emotion-1"
            style={
              Object {
                "lineHeight": "32px",
                "textAlign": "center",
              }
            }
          >
            A2/P1
          </span>
        </span>
        <p
          className="emotion-1"
        >
          Account 2 / Project 1
        </p>
      </div>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            caret-down-m
          </title>
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="emotion-35"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-11"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-9"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-10"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-34"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-33"
      >
        <div
          className="emotion-32"
        >
          <div>
            <ul
              className="emotion-21"
            >
              <span
                className="emotion-1"
                style={
                  Object {
                    "fontSize": "11px",
                    "textTransform": "uppercase",
                  }
                }
              >
                Accounts
              </span>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-14"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    A1
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Account 1
                </span>
              </li>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-14"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    A2
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Account 2
                </span>
              </li>
            </ul>
            <ul
              className="emotion-21"
            >
              <span
                className="emotion-1"
                style={
                  Object {
                    "fontSize": "11px",
                    "textTransform": "uppercase",
                  }
                }
              >
                Projects
              </span>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-2"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    P1
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Project 1
                </span>
              </li>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-2"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    P2
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Project 2
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`project-account-switcher/ProjectAccountSwitcher integration renders with default account/project 1`] = `
.emotion-36 {
  position: relative;
  display: inline-block;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-4 {
  margin: 0;
  padding-left: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 34px;
  line-height: 34px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  height: 32px;
  width: 32px;
  border-radius: 2px;
  border: 1px solid #bec8d2;
  color: #485366;
  text-align: center;
  margin-right: 10px;
}

.emotion-0 {
  position: absolute;
  top: 0;
  left: 0;
  border: none;
  cursor: pointer;
  color: transparent;
}

.emotion-0[src=''] {
  display: none;
}

.emotion-6 {
  margin: 0 12px;
}

.emotion-1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-5 {
  fill: #808080;
}

.emotion-5 > * {
  fill: #808080;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-9 {
  fill: transparent;
}

.emotion-10 {
  fill: #ffffff;
}

.emotion-32 {
  margin: 0;
  padding: 0 10px 10px 10px;
}

.emotion-34 {
  background-color: #ffffff;
  border-radius: 4px;
  border: none;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-33 {
  position: relative;
}

.emotion-21 {
  margin-top: 30px;
  margin-bottom: 10px;
  list-style: none;
  padding: 0;
}

.emotion-21:first-of-type {
  margin-top: 0;
  padding-top: 10px;
}

.emotion-16 {
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 34px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-top: 8px;
  white-space: nowrap;
}

.emotion-14 {
  display: inline-block;
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  height: 30px;
  width: 60px;
  border-radius: 2px;
  border: 1px solid #bec8d2;
  color: #485366;
  text-align: center;
  margin-right: 10px;
}

.emotion-15 {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006EAF;
  outline: none;
}

<div
  className="emotion-36"
>
  <div
    className="emotion-8"
  >
    <div
      className="emotion-7"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="emotion-4"
      >
        <span
          className="emotion-2"
        >
          <img
            alt="Account 1 / Project 2"
            className="emotion-0"
            src=""
          />
          <span
            className="emotion-1"
            style={
              Object {
                "lineHeight": "32px",
                "textAlign": "center",
              }
            }
          >
            A1/P2
          </span>
        </span>
        <p
          className="emotion-1"
        >
          Account 1 / Project 2
        </p>
      </div>
      <div
        className="emotion-6"
      >
        <svg
          className="emotion-5"
          height="10px"
          viewBox="0 0 10 10"
          width="10px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            caret-down-m
          </title>
          <path
            d="M8.71 3.22a.75.75 0 0 0-1.06 0L5 5.87 2.35 3.22a.75.75 0 0 0-1.06 0 .74.74 0 0 0 0 1.06l3.36 3.36a.5.5 0 0 0 .7 0l3.36-3.36a.74.74 0 0 0 0-1.06z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="emotion-35"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-11"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="emotion-9"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="emotion-10"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-34"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-33"
      >
        <div
          className="emotion-32"
        >
          <div>
            <ul
              className="emotion-21"
            >
              <span
                className="emotion-1"
                style={
                  Object {
                    "fontSize": "11px",
                    "textTransform": "uppercase",
                  }
                }
              >
                Accounts
              </span>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-14"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    A1
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Account 1
                </span>
              </li>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-14"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    A2
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Account 2
                </span>
              </li>
            </ul>
            <ul
              className="emotion-21"
            >
              <span
                className="emotion-1"
                style={
                  Object {
                    "fontSize": "11px",
                    "textTransform": "uppercase",
                  }
                }
              >
                Projects
              </span>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-2"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    P1
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Project 1
                </span>
              </li>
              <li
                className="emotion-16"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <span
                  className="emotion-2"
                >
                  <span
                    className="emotion-1"
                    style={
                      Object {
                        "lineHeight": "32px",
                        "textAlign": "center",
                      }
                    }
                  >
                    P2
                  </span>
                </span>
                <span
                  className="emotion-15"
                  onBlur={[Function]}
                  onClick={undefined}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  role="button"
                >
                  Project 2
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
